<resources>
    <string name="app_name">SOS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Events</string>
    <string name="title_notifications">Timer</string>
    <string name="welcome">Welcome to SOS!</string>
    <string-array name="callPriorities">
        <item>Call 911</item>
        <item>Call Primary Contact</item>
    </string-array>
    <string-array name="callPrioritiesAlias">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="textPriorities">
        <item>Text Primary Contact</item>
        <item>Text All Contacts</item>
    </string-array>
    <string-array name="textPrioritiesAlias">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="callSOS">SOS Call</string>
    <string name="textSMS">Text SOS</string>

    <string-array name="place_type">
        <item>doctor</item>
        <item>hospital</item>
        <item>police</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Police</item>
    </string-array>


    <string name="welcome_sos">Welcome to SOS</string>
    <string name="welcome_next">Next Button</string>
    <string name="primary_number">Set Primary Contact Number</string>
    <string name="primary_number_edit">Set Primary Contact Textbox</string>
    <string name="secondary_number_edit">Set Secondary Contact</string>
    <string name="third_number">Set Third Contact Number</string>
    <string name="priority">Contact Number Priority</string>
    <string name="call_priority911">Set Call Priority to 911</string>
    <string name="call_priority">Set Call Priority to Contacts</string>
    <string name="emergency_text">Emergency Text Priority</string>
    <string name="text_primary">Text Primary Number</string>
    <string name="text_all">Text All Numbers</string>
    <string name="complete">Finished Button</string>
    <string name="current_time">Current Date and Time</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="check_in_button">Check In Button</string>
    <string name="map">Map of Location</string>
    <string name="add_event">Add new Timer Event Button</string>
    <string name="date_pick">Date Picker Dialog</string>
    <string name="play">Start Timer Button</string>
    <string name="stop">Stop Timer Button</string>
    <string name="check_in_timer">Check in Timer Button</string>
    <string name="time_remaining_timer">Time Remaining Timer</string>
    <string name="set_time">Set Time Button</string>
    <string name="time_picker">Time Picker Dialog</string>
    <string name="selected_time">Selected Time</string>
    <string name="add_btn">Add Time Button</string>


</resources>
