<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/welcome_setting_container"
        tools:context=".WelcomeActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcome_sos"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/welcome"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/welcome_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:contentDescription="@string/welcome_next"
                android:layout_weight="3"
                android:textColor="@color/colorAccent"
                android:text="Next"/>

    </LinearLayout>




</LinearLayout>